--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "symfony/flex": "^2",
         "symfony/framework-bundle": "7.0.*",
         "symfony/runtime": "7.0.*",
+        "symfony/ux-vue": "^2.13",
         "symfony/yaml": "7.0.*"
     },
     "config": {
